@@ -24,7 +24,7 @@ public class TestSetProperty extends BaseTest {
     public void testSetByteProperty() {
         Assume.assumeTrue(this.sqlgGraph.getSqlDialect().supportsByteValues());
         Vertex marko = this.sqlgGraph.addVertex(T.label, "Person", "name", "marko");
-        marko.property("byte", new Byte((byte) 1));
+        marko.property("byte", Byte.valueOf((byte) 1));
         this.sqlgGraph.tx().commit();
         assertProperty(marko, "byte", (byte) 1);
     }
@@ -202,19 +202,19 @@ public class TestSetProperty extends BaseTest {
     public void testSetObjectProperties() {
         Assume.assumeTrue(this.sqlgGraph.getSqlDialect().supportsFloatValues());
         Vertex v = this.sqlgGraph.addVertex(T.label, "Person", "name", "marko");
-        v.property("age2", new Short((short) 1));
-        v.property("age3", new Integer(1));
-        v.property("age4", new Long(1L));
-        v.property("age5", new Float(1f));
-        v.property("age6", new Double(1d));
+        v.property("age2", Short.valueOf((short) 1));
+        v.property("age3", Integer.valueOf(1));
+        v.property("age4", Long.valueOf(1L));
+        v.property("age5", Float.valueOf(1f));
+        v.property("age6", Double.valueOf(1d));
         v.property("ok", Boolean.TRUE);
 
         this.sqlgGraph.tx().commit();
-        assertProperty(v, "age2", new Short((short) 1));
-        assertProperty(v, "age3", new Integer(1));
-        assertProperty(v, "age4", new Long(1L));
-        assertProperty(v, "age5", new Float(1f));
-        assertProperty(v, "age6", new Double(1d));
+        assertProperty(v, "age2", Short.valueOf((short) 1));
+        assertProperty(v, "age3", Integer.valueOf(1));
+        assertProperty(v, "age4", Long.valueOf(1L));
+        assertProperty(v, "age5", Float.valueOf(1f));
+        assertProperty(v, "age6", Double.valueOf(1d));
         assertProperty(v, "ok", Boolean.TRUE);
 
     }
@@ -292,53 +292,53 @@ public class TestSetProperty extends BaseTest {
     public void testObjectProperties() {
         Assume.assumeTrue(this.sqlgGraph.getSqlDialect().supportsFloatValues());
         Vertex v = this.sqlgGraph.addVertex(T.label, "Person",
-                "age2", new Short((short) 1),
-                "age3", new Integer(1),
-                "age4", new Long(1L),
-                "age5", new Float(1f),
-                "age6", new Double(1d),
+                "age2", Short.valueOf((short) 1),
+                "age3", Integer.valueOf(1),
+                "age4", Long.valueOf(1L),
+                "age5", Float.valueOf(1f),
+                "age6", Double.valueOf(1d),
                 "ok", Boolean.TRUE
         );
         this.sqlgGraph.tx().commit();
-        assertProperty(v, "age2", new Short((short) 1));
-        assertProperty(v, "age3", new Integer(1));
-        assertProperty(v, "age4", new Long(1L));
-        assertProperty(v, "age5", new Float(1f));
-        assertProperty(v, "age6", new Double(1d));
+        assertProperty(v, "age2", Short.valueOf((short) 1));
+        assertProperty(v, "age3", Integer.valueOf(1));
+        assertProperty(v, "age4", Long.valueOf(1L));
+        assertProperty(v, "age5", Float.valueOf(1f));
+        assertProperty(v, "age6", Double.valueOf(1d));
         assertProperty(v, "ok", Boolean.TRUE);
     }
 
     @Test
     public void testObjectPropertiesNoFloat() {
         Vertex v = this.sqlgGraph.addVertex(T.label, "Person",
-                "age2", new Short((short) 1),
-                "age3", new Integer(1),
-                "age4", new Long(1L),
-                "age6", new Double(1d),
+                "age2", Short.valueOf((short) 1),
+                "age3", Integer.valueOf(1),
+                "age4", Long.valueOf(1L),
+                "age6", Double.valueOf(1d),
                 "ok", Boolean.TRUE
         );
         this.sqlgGraph.tx().commit();
-        assertProperty(v, "age2", new Short((short) 1));
-        assertProperty(v, "age3", new Integer(1));
-        assertProperty(v, "age4", new Long(1L));
-        assertProperty(v, "age6", new Double(1d));
+        assertProperty(v, "age2", Short.valueOf((short) 1));
+        assertProperty(v, "age3", Integer.valueOf(1));
+        assertProperty(v, "age4", Long.valueOf(1L));
+        assertProperty(v, "age6", Double.valueOf(1d));
         assertProperty(v, "ok", Boolean.TRUE);
     }
 
     @Test
     public void testDateTimeProperties() {
         Vertex v = this.sqlgGraph.addVertex(T.label, "Person", "name", "marko");
-        LocalDateTime ldt = LocalDateTime.now();
+        LocalDateTime ldt = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
         v.property("ldt", ldt);
         v.property("ld", ldt.toLocalDate());
         LocalTime lt = ldt.toLocalTime().truncatedTo(ChronoUnit.SECONDS);
         v.property("lt", lt);
 
-        ZonedDateTime zdt = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("Africa/Johannesburg"));
-        ZonedDateTime zdt1Fixed = ZonedDateTime.of(zdt.toLocalDateTime(), ZoneId.of("Africa/Johannesburg"));
+        ZonedDateTime zdt = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("Africa/Johannesburg")).truncatedTo(ChronoUnit.MILLIS);
+        ZonedDateTime zdt1Fixed = ZonedDateTime.of(zdt.toLocalDateTime(), ZoneId.of("Africa/Johannesburg")).truncatedTo(ChronoUnit.MILLIS);
         v.property("zdt", zdt);
 
-        ZonedDateTime zdt2 = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("+02:00"));
+        ZonedDateTime zdt2 = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("+02:00")).truncatedTo(ChronoUnit.MILLIS);
         ZonedDateTime zdt2Fixed = ZonedDateTime.of(zdt2.toLocalDateTime(), ZoneId.of("GMT+02:00"));
         v.property("zdt2", zdt2);
 
@@ -414,15 +414,14 @@ public class TestSetProperty extends BaseTest {
         Vertex vJ = this.sqlgGraph.addVertex(T.label, "Person", "name", "john");
         Edge e1 = vJ.addEdge("knows", v);
 
-        LocalDateTime ldt = LocalDateTime.now();
+        LocalDateTime ldt = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
         e1.property("ldt", ldt);
         e1.property("ld", ldt.toLocalDate());
         LocalTime lt = ldt.toLocalTime().truncatedTo(ChronoUnit.SECONDS);
         e1.property("lt", lt);
 
-        ZonedDateTime zdt = ZonedDateTime.now();
+        ZonedDateTime zdt = ZonedDateTime.now().truncatedTo(ChronoUnit.MILLIS);
         e1.property("zdt", zdt);
-
 
         Period p = Period.ofDays(3);
         e1.property("p", p);
@@ -451,16 +450,16 @@ public class TestSetProperty extends BaseTest {
     public void testDateTimeArrayProperties() {
         Assume.assumeTrue(this.sqlgGraph.getSqlDialect().supportsLocalDateTimeArrayValues());
         Vertex v = this.sqlgGraph.addVertex(T.label, "Person", "name", "marko");
-        LocalDateTime ldt = LocalDateTime.now();
+        LocalDateTime ldt = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
         v.property("ldt", new LocalDateTime[]{ldt});
         v.property("ld", new LocalDate[]{ldt.toLocalDate()});
         LocalTime lt = ldt.toLocalTime().truncatedTo(ChronoUnit.SECONDS);
         v.property("lt", new LocalTime[]{lt});
 
-        ZonedDateTime zdt = ZonedDateTime.now();
+        ZonedDateTime zdt = ZonedDateTime.now().truncatedTo(ChronoUnit.MILLIS);
         v.property("zdt", new ZonedDateTime[]{zdt});
 
-        ZonedDateTime zdt2 = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("+02:00"));
+        ZonedDateTime zdt2 = ZonedDateTime.of(LocalDateTime.now(), ZoneId.of("+02:00")).truncatedTo(ChronoUnit.MILLIS);
         v.property("zdt2", new ZonedDateTime[]{zdt2});
 
         Period p = Period.ofDays(3);
